vfpl_parser/src/snapshots/vfpl__parse__test__greater_equal_than_expr.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Comparison(
        Comparison {
            span: Span {
                start: 0,
                end: 0,
            },
            lhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Absent,
                },
            ),
            rhs: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Undefined,
                },
            ),
            kind: GreaterEq,
        },
    ),
)
