vfpl_parser/src/snapshots/vfpl__parse__test__literal_call_expr.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Literal(
        Literal {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: String(
                "string",
            ),
        },
    ),
)
